# ros2-cobot-autonomous-navigation

./: .gitignore  README.md
firmware/: README.md
firmware/esp32s3_telemetry/: TelemetryRobotNode.cpp  TelemetryRobotNode.h  _41_micro_ros_telemetry_bat_1.ino
firmware/libraries/BaseRobotNode/: BaseRobotNode.cpp  BaseRobotNode.h
firmware/libraries/DCMotor/: DCMotor.cpp  DCMotor.h
firmware/libraries/DCMotorPWM/: DCMotorPWM.cpp  DCMotorPWM.h
firmware/libraries/DiffDriveController/: DiffDriveController.cpp  DiffDriveController.h
firmware/libraries/DiffDriveRobotNode/: DiffDriveRobotNode.cpp  DiffDriveRobotNode.h
firmware/libraries/Encoder/: Encoder.cpp  Encoder.h
firmware/libraries/MotorControl/: MotorControl.cpp  MotorControl.h
firmware/libraries/NodeStatus/: NodeStatus.cpp  NodeStatus.h
firmware/libraries/PID/: PID.cpp  PID.h
firmware/libraries/myMPU6050/: myMPU6050.cpp  myMPU6050.h
ros2_ws/maps/: map.pgm  map.yaml
ros2_ws/scripts/: 01_micro_ros_agent.sh  02_odometry.sh  03_rsp.sh  04_lidar.sh  05_nav2_map.sh  06_rviz.sh  07_teleop_keyboard.sh
ros2_ws/src/co_bot_2_description/: CMakeLists.txt  README_URDF_제작메모.md  package.xml
ros2_ws/src/co_bot_2_description/config/: navigation.yaml
ros2_ws/src/co_bot_2_description/launch/: display.launch.py  display_headless.launch.py  navigation_demo.launch.py  robot_bringup.launch.py  rsp.launch.py  slam_with_nav2.launch.py  teleop_twist_keyboard.launch.py
ros2_ws/src/co_bot_2_description/meshes/: body_b1.stl  body_b2.stl  body_lidar_part12.stl  body_part10.stl  body_part11.stl  body_part12_boss1.stl  body_part19.stl  body_part20_1.stl  body_part20_2.stl  body_part24_1.stl  body_part24_2.stl  body_spi_lcd.stl  camera_part9.stl  left_gripper_part17.stl  left_hand_part22.stl  left_wheel_part2.stl  lidar_part12_boss3.stl  right_gripper_part17.stl  right_hand_part22.stl  right_wheel_part2.stl  slide_b3.stl
ros2_ws/src/co_bot_2_description/rviz/: co_bot_2_display.rviz  nav2_demo.rviz  slam.rviz
ros2_ws/src/co_bot_2_description/urdf/: co_bot_2.urdf.xacro
ros2_ws/src/lidar_publisher/: CMakeLists.txt  _01_ld14p_read.py  _02_lidar_bytes_per_second.py  _03_lidar_bytes_in_waiting.py  _04_lidar_get_packet.py  _05_lidar_parse_packet.py  _06_lidar_publisher.py  analysis.py  analysis_ex.cpp  analysis_ex.hpp  analysis_ex.py  lidar_publisher.cpp  package.xml
ros2_ws/src/lidar_publisher/ld14p_cpp/: CMakeLists.txt
ros2_ws/src/odometry_publisher/: CMakeLists.txt  _42_odometry_publisher.cpp  _42_odometry_publisher.py  package.xml
