<?xml version="1.0"?>
<package format="3">
  <name>lidar_publisher</name>
  <version>0.0.1</version>
  <description>LD14P lidar publisher</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
